Implement Server Profile authentication capabilities
